tests/semantic/invalid/function_parameter_type_mismatch.c
/*
 * Multi-line comment.
 */

void foo(int8_t a, char c);

void foo(int8_t a, int8_t c)
{
    return;
}
